src/objects/Apttus_Config2__ConfigSystemProperties__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__ProductTotalingHierarchy__c</fullName>
        <description>Enter the list of product fields that represent the product totaling hierarchy. Each product field name should be separated by a new line. For Ad-hoc totaling enter the line item fields which represent a totaling group</description>
        <inlineHelpText>Enter the list of product fields that represent the product totaling hierarchy. Each product field name should be separated by a new line. For Ad-hoc totaling enter the line item fields which represent a totaling group</inlineHelpText>
        <label>Adhoc/Product Totaling Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuantityFieldPrecision__c</fullName>
        <description>Holds the quantity field precision.
(used by the formatfields function)</description>
        <label>Quantity Field Precision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ResolveConfigurationPageDefault__c</fullName>
        <description>The default page for resolving configuration errors/warnings</description>
        <inlineHelpText>Enter the default Resolve Configure page. On Resolve Configuration Errors\Warnings, this page will be used. Valid values are :
ResolveConfig
ResolveConfigProducts</inlineHelpText>
        <label>Resolve Configuration Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RevalidationProductColumns__c</fullName>
        <description>Enter the list of fields from the product object displayed on the revalidation product dialog. Each field API name may be separated either by a comma or by a new line.</description>
        <inlineHelpText>Enter the list of fields from the product object displayed on the revalidation product dialog. Each field API name may be separated either by a comma or by a new line.</inlineHelpText>
        <label>Revalidation Product Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RunFinalizationTaskInAsyncMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the post finalization trigger should be run asynchronously</description>
        <inlineHelpText>Indicates whether the post finalization trigger should be run asynchronously</inlineHelpText>
        <label>Run Post Finalize Trigger In Async Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RunSecondaryFinalizationTaskInAsyncMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the secondary finalization task (attributes, usage tiers, etc) should be run asynchronously</description>
        <inlineHelpText>Indicates whether the secondary finalization task (attributes, usage tiers, etc) should be run asynchronously</inlineHelpText>
        <label>Run Misc Finalization Task In Async Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SaveOnAllActions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked save operation will be performed on all actions.</description>
        <inlineHelpText>When checked save operation will be performed on all actions.</inlineHelpText>
        <label>Save On All Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchAttributeDefaultPage__c</fullName>
        <description>Field on the line item when checked, skips Constraint check. Enables bypassing constraint and finalize quote even if there are constraint errors.</description>
        <inlineHelpText>Field on the line item when checked, skips Constraint check. Enables bypassing constraint and finalize quote even if there are constraint errors.</inlineHelpText>
        <label>Skip Constraint Decision Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchAttributeValuePage__c</fullName>
        <description>The scope to look for related items in related pricing. The default value is Cart
Valid Values are:
============
Cart
Bundle</description>
        <inlineHelpText>The scope to look for related items in related pricing. The default value is Cart
Valid Values are:
============
Cart
Bundle</inlineHelpText>
        <label>Related Price Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchCategoryDefault__c</fullName>
        <description>The default search category.</description>
        <inlineHelpText>The default category to search using the text entered in the search box during product selection.

AllProducts
AllCategories</inlineHelpText>
        <label>Search Category Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowAdminSidebar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the sidebar should be displayed for admin pages.</description>
        <inlineHelpText>Indicates whether the sidebar should be displayed for admin pages.</inlineHelpText>
        <label>Show Admin Sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowAttributesInCart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows the specified attributes applicable to the line items in the cart. Attributes appear in the product dialog.</description>
        <inlineHelpText>Shows the specified attributes applicable to the line items in the cart. Attributes appear in the product dialog.</inlineHelpText>
        <label>Show Attributes In Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowErrorInHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether relative url should be generated for links for a Communities user</description>
        <inlineHelpText>Indicates whether relative url should be generated for links for a Communities user</inlineHelpText>
        <label>Generate Relative Url For Sites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the header tabs and sidebar should be displayed.</description>
        <inlineHelpText>Indicates whether the header tabs and sidebar should be displayed.</inlineHelpText>
        <label>Show Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowInfoInHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to show information message from auto include or auto exclude in the header</description>
        <inlineHelpText>Whether to show information message from auto include or auto exclude in the header</inlineHelpText>
        <label>Show Info In Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowMessageInline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show error and warning messages along with the product name</description>
        <inlineHelpText>Show error and warning messages along with the product name</inlineHelpText>
        <label>Show Message Inline(D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowWarningInHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to show warning type rule action messages in header (DEPRECATED)</description>
        <inlineHelpText>This custom setting is deprecated</inlineHelpText>
        <label>Show Warning In Header (D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SkipPricingOnSelectPages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Keyed matrix pricing performs keyed lookup to locate matrix entries in a large matrix</description>
        <inlineHelpText>Keyed matrix pricing performs keyed lookup to locate matrix entries in a large matrix</inlineHelpText>
        <label>Enable Keyed Matrix Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SkipReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the review step should be skipped for items in the cart</description>
        <inlineHelpText>Indicates whether the review step should be skipped for items in the cart</inlineHelpText>
        <label>Skip Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StaticCriteriaFields__c</fullName>
        <description>Constraint Criteria Fields that have static values. Fields whose value do not change after the records are created for a cart.</description>
        <inlineHelpText>Enter comma separated fields used in constraint rule criteria to optimize constraint rule.</inlineHelpText>
        <label>Static Criteria Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TabViewInConfigureBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the option groups in a tab view. Top level option groups are displayed as tabs.</description>
        <inlineHelpText>Check to show tab view. Top level option groups are displayed as tabs.</inlineHelpText>
        <label>Show Tab View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TermFieldPrecision__c</fullName>
        <description>Holds the selling term field precision.
(used by the formatfields function)</description>
        <label>Term Field Precision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TotalingGroupType__c</fullName>
        <description>The totaling group preference.</description>
        <inlineHelpText>The default value for the summary group type picklist. For Product based totaling, also indicate the fields which form the hierarchy using the Product Hierarchy Fields custom setting.
Valid values are:
=============
Category
Product
Ad Hoc</inlineHelpText>
        <label>Totaling Group Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseButtonToSaveSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to wait for button click before processing option selection and validation.</description>
        <inlineHelpText>Indicates whether to wait for button click before processing option selection and validation.</inlineHelpText>
        <label>Use Button To Save Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseEnhancedCSS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to include the enhanced css file on CPQ pages</description>
        <inlineHelpText>Indicates whether to include the enhanced css file on CPQ pages</inlineHelpText>
        <label>Use Enhanced CSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ViewCartCustomFields2__c</fullName>
        <description>Enter the list of additional custom fields from the line item object displayed in the custom view cart page</description>
        <inlineHelpText>Enter the list of additional custom fields from the line item object displayed in the custom view cart page</inlineHelpText>
        <label>View Cart Custom Fields 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ViewCartCustomFields__c</fullName>
        <description>Enter the list of custom fields from the line item object displayed in the custom view cart page</description>
        <inlineHelpText>Enter the list of custom fields from the line item object displayed in the custom view cart page. Additional fields may be entered using the View Cart Custom Fields 2 custom setting.</inlineHelpText>
        <label>View Cart Custom Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ViewCartPage__c</fullName>
        <description>The custom page to view cart information</description>
        <label>View Cart Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ViewCartTotalCustomFields__c</fullName>
        <description>Enter the list of custom fields from the summary group object displayed in the custom view cart page</description>
        <inlineHelpText>Enter the list of custom fields from the summary group object displayed in the custom view cart page</inlineHelpText>
        <label>View Cart Total Custom Fields</label>
        <type>TextArea</type>
    </fields>
    <label>Config System Properties</label>
</CustomObject>